[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Level_Components/Level_Elements/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Grid.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Robot.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelControl.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/IDE.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Level_Components/IDE_Elements/FunctionBlock.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/CodeBlockBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Forward.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Interact.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelClearedPopup.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/Levels/Functions/Functions 1.gd" type="Script" id=13]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/CallFunction.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Level_Components/TextBox.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/Placeholders/Up.png" type="Texture" id=16]

[node name="Functions 1" type="Node2D"]
script = ExtResource( 13 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Grid" parent="." instance=ExtResource( 4 )]

[node name="Robot" parent="Grid" instance=ExtResource( 5 )]

[node name="Button1" parent="Grid" instance=ExtResource( 2 )]

[node name="Button2" parent="Grid" instance=ExtResource( 2 )]

[node name="Door" parent="Grid" instance=ExtResource( 3 )]

[node name="Level Control" parent="." instance=ExtResource( 6 )]

[node name="IDE" parent="." instance=ExtResource( 7 )]

[node name="Counter" parent="IDE/Main" index="4"]
maxBlocks = 2

[node name="F1" parent="IDE" instance=ExtResource( 8 )]
margin_top = 513.0
margin_bottom = 788.0

[node name="Counter" parent="IDE/F1" index="4"]
maxBlocks = 3

[node name="F1_Arrow" type="Sprite" parent="IDE"]
position = Vector2( -106, 392 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 16 )

[node name="CodeBlockBar" parent="." instance=ExtResource( 9 )]

[node name="Forward" parent="CodeBlockBar" instance=ExtResource( 10 )]
position = Vector2( 0, -918 )

[node name="Interact" parent="CodeBlockBar" instance=ExtResource( 11 )]

[node name="Call_F1" parent="CodeBlockBar" instance=ExtResource( 14 )]

[node name="AcceptDialog" parent="." instance=ExtResource( 12 )]

[node name="TextBox" parent="." instance=ExtResource( 15 )]

[editable path="IDE"]
[editable path="IDE/Main"]
[editable path="IDE/F1"]
